--- a/hands_on_ex/hands_on_ex05/hands_on_ex05.qmd
+++ b/hands_on_ex/hands_on_ex05/hands_on_ex05.qmd
@@ -355,6 +355,182 @@ corrplot(wine.cor,
 
 # **3. Heatmap for Visualising and Analysing Multivariate Data**
 
+## **Installing and Launching R Packages**
+
+```{r}
+#| eval: false
+pacman::p_load(seriation, dendextend, heatmaply, tidyverse)
+```
+
+## **Importing and Preparing The Data Set**
+
+### **Importing the data set**
+
+```{r}
+#| eval: false
+wh <- read_csv("data/WHData-2018.csv")
+```
+
+### **Preparing the data**
+
+```{r}
+#| eval: false
+row.names(wh) <- wh$Country
+```
+
+### **Transforming the data frame into a matrix**
+
+```{r}
+#| eval: false
+wh1 <- dplyr::select(wh, c(3, 7:12))
+wh_matrix <- data.matrix(wh)
+```
+
+### **heatmap() of R Stats**
+
+```{r}
+#| eval: false
+wh_heatmap <- heatmap(wh_matrix,
+                      Rowv=NA, Colv=NA)
+```
+
+```{r}
+#| eval: false
+wh_heatmap <- heatmap(wh_matrix)
+```
+
+```{r}
+#| eval: false
+wh_heatmap <- heatmap(wh_matrix,
+                      scale="column",
+                      cexRow = 0.6, 
+                      cexCol = 0.8,
+                      margins = c(10, 4))
+```
+
+## **Creating Interactive Heatmap**
+
+### **Working with heatmaply**
+
+```{r}
+#| eval: false
+heatmaply(mtcars)
+```
+
+```{r}
+#| eval: false
+heatmaply(wh_matrix[, -c(1, 2, 4, 5)])
+```
+
+### **Data trasformation**
+
+```{r}
+#| eval: false
+heatmaply(wh_matrix[, -c(1, 2, 4, 5)],
+          scale = "column")
+```
+
+#### Normalising method
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]))
+```
+
+#### Percentising method
+
+```{r}
+#| eval: false
+heatmaply(percentize(wh_matrix[, -c(1, 2, 4, 5)]))
+```
+
+### **Clustering algorithm**
+
+### **Manual approach**
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          dist_method = "euclidean",
+          hclust_method = "ward.D")
+```
+
+### **Statistical approach**
+
+```{r}
+#| eval: false
+wh_d <- dist(normalize(wh_matrix[, -c(1, 2, 4, 5)]), method = "euclidean")
+dend_expend(wh_d)[[3]]
+```
+
+```{r}
+#| eval: false
+wh_clust <- hclust(wh_d, method = "average")
+num_k <- find_k(wh_clust)
+plot(num_k)
+```
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          dist_method = "euclidean",
+          hclust_method = "average",
+          k_row = 3)
+```
+
+### **Seriation**
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          seriate = "OLO")
+```
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          seriate = "GW")
+```
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          seriate = "mean")
+```
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          seriate = "none")
+```
+
+### **Working with colour palettes**
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          seriate = "none",
+          colors = Blues)
+```
+
+### **The finishing touch**
+
+```{r}
+#| eval: false
+heatmaply(normalize(wh_matrix[, -c(1, 2, 4, 5)]),
+          Colv=NA,
+          seriate = "none",
+          colors = Blues,
+          k_row = 5,
+          margins = c(NA,200,60,NA),
+          fontsize_row = 4,
+          fontsize_col = 5,
+          main="World Happiness Score and Variables by Country, 2018 \nDataTransformation using Normalise Method",
+          xlab = "World Happiness Indicators",
+          ylab = "World Countries"
+          )
+```
+
 # **4. Visual Multivariate Analysis with Parallel Coordinates Plot**
 
 ##  **Installing and Launching R Packages**
