--- a/index.qmd
+++ b/index.qmd
@@ -20,10 +20,10 @@ Image obtained from [here](https://wiki.smu.edu.sg/1920t2isss608/File:Vaa_logo.j
 | 20 Jan 2024 | Designing Graphs to Enlighten                | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex02/hands_on_ex02)                                                                                              | [link](https://czx-isss608.netlify.app/in_class_ex/in_class_ex02/in_class_ex02) |
 | 27 Jan 2024 | Interactivity in Visual Analytics            | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex03/hands_on_ex03.1) and [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex03/hands_on_ex03.2.html) |                                                                                 |
 | 3 Feb 2024  | Fundamentals of Visual Analytics             | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex04/hands_on_ex04)                                                                                              |                                                                                 |
-| 17 Feb 2024 | Visual Multivariate Analysis                 |                                                                                                                                                                              |                                                                                 |
-| 24 Feb 2024 | Visualising and Analysing Time-Oriented Data |                                                                                                                                                                              |                                                                                 |
-| 2 Mar 2024  | Visualising and Analysing Geographic Data    |                                                                                                                                                                              |                                                                                 |
-| 9 Mar 2024  | Network Data Visualisation and Analysis      |                                                                                                                                                                              |                                                                                 |
-| 16 Mar 2024 | Visualising and Analysing Text Data          |                                                                                                                                                                              |                                                                                 |
+| 17 Feb 2024 | Visual Multivariate Analysis                 | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex05/hands_on_ex05.html)                                                                                         |                                                                                 |
+| 24 Feb 2024 | Visualising and Analysing Time-Oriented Data | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex06/hands_on_ex06.html)                                                                                         |                                                                                 |
+| 2 Mar 2024  | Visualising and Analysing Geographic Data    | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex07/hands_on_ex07.html)                                                                                         |                                                                                 |
+| 9 Mar 2024  | Network Data Visualisation and Analysis      | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex08/hands_on_ex08.html)                                                                                         |                                                                                 |
+| 16 Mar 2024 | Visualising and Analysing Text Data          | [link](https://czx-isss608.netlify.app/hands_on_ex/hands_on_ex09/hands_on_ex09.html)                                                                                         |                                                                                 |
 | 23 Mar 2024 | Information Dashboard Design                 |                                                                                                                                                                              |                                                                                 |
 | 30 Mar 2024 | Poster Presentation                          |                                                                                                                                                                              |                                                                                 |
